fix word wrap in stat table [skip ci]

--- a/css/phonetrack.css
+++ b/css/phonetrack.css
@@ -621,7 +621,7 @@ ul.devicelist {
     padding: 0px 5px 0px 5px;
     border-radius: 0;
 }
-.stattable td.roundmarker {
+.stattable td {
     max-width: 120px;
     word-wrap: break-word;
     overflow-wrap: break-word;
